Enhance ice monitoring notebook by adding functionality to handle deprecated Sentinel-2 items. Implemented logic to identify and fetch replacements for deprecated items, updated time range for item search, and improved print statements for better tracking of valid and deprecated items.

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -23,13 +23,17 @@
         "from shapely.geometry import box\n",
         "import shapely.geometry\n",
         "import pystac_client\n",
+        "from pystac import Item\n",
         "import xarray as xr\n",
         "import os\n",
+        "import requests\n",
         "from datetime import datetime\n",
         "from pyproj import Transformer\n",
         "import dask\n",
-        "# from xcube.core.store import new_data_store # Removed as we are switching to pystac/xarray\n",
-        "# from xcube_eopf.utils import reproject_bbox # Removed"
+        "import warnings\n",
+        "\n",
+        "# Suppress pystac deprecation warnings (we handle deprecated items manually)\n",
+        "warnings.filterwarnings(\"ignore\", category=DeprecationWarning, module=\"pystac\")"
       ]
     },
     {
@@ -108,7 +112,7 @@
         "\n",
         "# Search for Sentinel-2 L2A items\n",
         "# Adjust date range as needed.\n",
-        "time_range_str = \"2023-06-01/2023-06-30\"\n",
+        "time_range_str = \"2025-06-01/2025-06-30\"\n",
         "\n",
         "print(f\"Searching STAC for {time_range_str} over AOI...\")\n",
         "search = catalog.search(\n",
@@ -118,12 +122,61 @@
         ")\n",
         "\n",
         "items = list(search.items())\n",
-        "# Filter items that have the 'product' asset to avoid KeyErrors\n",
-        "hrefs = [item.assets[\"product\"].href for item in items if \"product\" in item.assets]\n",
+        "print(f\"Found {len(items)} total items.\")\n",
         "\n",
-        "print(f\"Found {len(items)} items.\")\n",
-        "if len(items) > 0:\n",
-        "    print(f\"First item: {items[0].id}\")\n",
+        "# Separate deprecated and valid items\n",
+        "deprecated_items = []\n",
+        "valid_items = []\n",
+        "\n",
+        "for item in items:\n",
+        "    if item.properties.get(\"deprecated\", False):\n",
+        "        deprecated_items.append(item)\n",
+        "    else:\n",
+        "        valid_items.append(item)\n",
+        "\n",
+        "print(f\"  - Valid items: {len(valid_items)}\")\n",
+        "print(f\"  - Deprecated items: {len(deprecated_items)}\")\n",
+        "\n",
+        "# Try to find newer versions for deprecated items via 'superseded-by' link\n",
+        "replacement_items = []\n",
+        "for dep_item in deprecated_items:\n",
+        "    # Look for 'superseded-by' link\n",
+        "    superseded_by_link = next(\n",
+        "        (link for link in dep_item.links if link.rel == \"superseded-by\"), \n",
+        "        None\n",
+        "    )\n",
+        "    if superseded_by_link:\n",
+        "        try:\n",
+        "            # Fetch the replacement item from the catalog\n",
+        "            replacement = catalog.get_collection(dep_item.collection_id).get_item(\n",
+        "                superseded_by_link.target.split(\"/\")[-1]\n",
+        "            ) if hasattr(superseded_by_link, 'target') else None\n",
+        "            \n",
+        "            # Alternative: directly fetch via href if available\n",
+        "            if replacement is None and superseded_by_link.href:\n",
+        "                resp = requests.get(superseded_by_link.href)\n",
+        "                if resp.status_code == 200:\n",
+        "                    replacement = Item.from_dict(resp.json())\n",
+        "                    \n",
+        "            if replacement and not replacement.properties.get(\"deprecated\", False):\n",
+        "                replacement_items.append(replacement)\n",
+        "                print(f\"  Found replacement for {dep_item.id}: {replacement.id}\")\n",
+        "            else:\n",
+        "                print(f\"  No valid replacement found for {dep_item.id}\")\n",
+        "        except Exception as e:\n",
+        "            print(f\"  Could not fetch replacement for {dep_item.id}: {e}\")\n",
+        "    else:\n",
+        "        print(f\"  No 'superseded-by' link for deprecated item: {dep_item.id}\")\n",
+        "\n",
+        "# Combine valid items with replacements\n",
+        "final_items = valid_items + replacement_items\n",
+        "print(f\"\\nUsing {len(final_items)} items after resolving deprecations.\")\n",
+        "\n",
+        "# Filter items that have the 'product' asset to avoid KeyErrors\n",
+        "hrefs = [item.assets[\"product\"].href for item in final_items if \"product\" in item.assets]\n",
+        "\n",
+        "if len(final_items) > 0:\n",
+        "    print(f\"First item: {final_items[0].id}\")\n",
         "\n",
         "# Function to extract time from filename (as per example)\n",
         "def extract_time(ds):\n",
