Add parallel validation for Zarr store hrefs in ice monitoring notebook. Introduced a new function to check accessibility of hrefs and utilized ThreadPoolExecutor for improved performance in validating multiple items simultaneously.

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -31,6 +31,7 @@
         "from pyproj import Transformer\n",
         "import dask\n",
         "import warnings\n",
+        "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
         "\n",
         "# Suppress pystac deprecation warnings (we handle deprecated items manually)\n",
         "warnings.filterwarnings(\"ignore\", category=DeprecationWarning, module=\"pystac\")"
@@ -173,7 +174,43 @@
         "print(f\"\\nUsing {len(final_items)} items after resolving deprecations.\")\n",
         "\n",
         "# Filter items that have the 'product' asset to avoid KeyErrors\n",
-        "hrefs = [item.assets[\"product\"].href for item in final_items if \"product\" in item.assets]\n",
+        "hrefs_raw = [item.assets[\"product\"].href for item in final_items if \"product\" in item.assets]\n",
+        "\n",
+        "# Validate hrefs by checking if the Zarr store is accessible\n",
+        "# We check for .zgroup file which should exist at the root of any Zarr store\n",
+        "def validate_href(href):\n",
+        "    \"\"\"Check if a Zarr store is accessible by probing for .zgroup or .zmetadata.\"\"\"\n",
+        "    try:\n",
+        "        # Try .zgroup first (always present in Zarr v2)\n",
+        "        test_url = href.rstrip(\"/\") + \"/.zgroup\"\n",
+        "        resp = requests.head(test_url, timeout=5)\n",
+        "        if resp.status_code == 200:\n",
+        "            return href\n",
+        "        # Fallback to .zmetadata (consolidated metadata)\n",
+        "        test_url = href.rstrip(\"/\") + \"/.zmetadata\"\n",
+        "        resp = requests.head(test_url, timeout=5)\n",
+        "        if resp.status_code == 200:\n",
+        "            return href\n",
+        "    except Exception:\n",
+        "        pass\n",
+        "    return None\n",
+        "\n",
+        "print(f\"Validating {len(hrefs_raw)} hrefs in parallel (this may take a moment)...\")\n",
+        "hrefs = []\n",
+        "invalid_count = 0\n",
+        "\n",
+        "# Use ThreadPoolExecutor for parallel validation (much faster for many items)\n",
+        "with ThreadPoolExecutor(max_workers=20) as executor:\n",
+        "    futures = {executor.submit(validate_href, href): href for href in hrefs_raw}\n",
+        "    for future in as_completed(futures):\n",
+        "        result = future.result()\n",
+        "        if result:\n",
+        "            hrefs.append(result)\n",
+        "        else:\n",
+        "            invalid_count += 1\n",
+        "\n",
+        "print(f\"  - Valid hrefs: {len(hrefs)}\")\n",
+        "print(f\"  - Invalid/inaccessible hrefs: {invalid_count}\")\n",
         "\n",
         "if len(final_items) > 0:\n",
         "    print(f\"First item: {final_items[0].id}\")\n",
