Add functionality to group valid hrefs by Sentinel-2 tile ID in ice monitoring notebook. Introduced a new function to extract tile IDs and updated processing logic to select the tile with the most scenes for further analysis.

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -212,6 +212,35 @@
         "print(f\"  - Valid hrefs: {len(hrefs)}\")\n",
         "print(f\"  - Invalid/inaccessible hrefs: {invalid_count}\")\n",
         "\n",
+        "# Group valid hrefs by tile ID to avoid coordinate conflicts\n",
+        "# Sentinel-2 tile ID is typically in position 5 of the filename (e.g., T27WVP)\n",
+        "def extract_tile_id(href):\n",
+        "    \"\"\"Extract tile ID from Sentinel-2 product href.\"\"\"\n",
+        "    basename = os.path.basename(href.rstrip(\"/\"))\n",
+        "    parts = basename.split(\"_\")\n",
+        "    # Find the part that looks like a tile ID (starts with T followed by digits/letters)\n",
+        "    for part in parts:\n",
+        "        if part.startswith(\"T\") and len(part) == 6:\n",
+        "            return part\n",
+        "    return \"unknown\"\n",
+        "\n",
+        "# Group hrefs by tile\n",
+        "hrefs_by_tile = {}\n",
+        "for href in hrefs:\n",
+        "    tile_id = extract_tile_id(href)\n",
+        "    if tile_id not in hrefs_by_tile:\n",
+        "        hrefs_by_tile[tile_id] = []\n",
+        "    hrefs_by_tile[tile_id].append(href)\n",
+        "\n",
+        "print(f\"\\nData grouped by {len(hrefs_by_tile)} tiles:\")\n",
+        "for tile_id, tile_hrefs in sorted(hrefs_by_tile.items(), key=lambda x: -len(x[1])):\n",
+        "    print(f\"  {tile_id}: {len(tile_hrefs)} scenes\")\n",
+        "\n",
+        "# Select the tile with the most scenes for processing\n",
+        "selected_tile = max(hrefs_by_tile.keys(), key=lambda t: len(hrefs_by_tile[t]))\n",
+        "hrefs = hrefs_by_tile[selected_tile]\n",
+        "print(f\"\\nSelected tile {selected_tile} with {len(hrefs)} scenes for processing.\")\n",
+        "\n",
         "if len(final_items) > 0:\n",
         "    print(f\"First item: {final_items[0].id}\")\n",
         "\n",
