Update ice monitoring notebook to suppress additional deprecation warnings from pystac and reset execution counts and outputs for code cells for cleaner execution state.

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -11,9 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {},
-      "outputs": [],
       "source": [
         "import geopandas as gpd\n",
         "import numpy as np\n",
@@ -34,8 +32,11 @@
         "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
         "\n",
         "# Suppress pystac deprecation warnings (we handle deprecated items manually)\n",
-        "warnings.filterwarnings(\"ignore\", category=DeprecationWarning, module=\"pystac\")"
-      ]
+        "warnings.filterwarnings(\"ignore\", category=DeprecationWarning, module=\"pystac\")\n",
+        "warnings.filterwarnings(\"ignore\", message=\".*is deprecated.*\", module=\"pystac\")"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -47,9 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {},
-      "outputs": [],
       "source": [
         "# Load seeds\n",
         "seeds_gdf = gpd.read_file(\"data/Iceland_Seeds.geojson\")\n",
@@ -90,7 +89,9 @@
         "y_slice = slice(north_utm, south_utm)\n",
         "\n",
         "print(f\"UTM Bounds ({target_crs}): West={west_utm}, South={south_utm}, East={east_utm}, North={north_utm}\")"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -104,9 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {},
-      "outputs": [],
       "source": [
         "# STAC Search\n",
         "catalog = pystac_client.Client.open(\"https://stac.core.eopf.eodc.eu\")\n",
@@ -356,7 +355,9 @@
         "\n",
         "    except Exception as e:\n",
         "        print(f\"Error creating datacube: {e}\")"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
