Overhaul of the STAC-Query for a given Candidate-Cell and timeperiod

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -76,18 +76,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "284ab12f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All libraries successfully imported\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Standard libraries\n",
     "import warnings\n",
@@ -123,7 +115,9 @@
     "SNOW_PERCENTAGE_THRESHOLD = 0.30  # Spatial expansion threshold (30% snow coverage)\n",
     "STAC_URL = \"https://stac.core.eopf.eodc.eu\"  # EOPF STAC Catalog endpoint\n",
     "\n",
-    "print(\"All libraries successfully imported\")"
+    "# Time period configuration\n",
+    "DATE_START = \"2025-07-01\"  # Start date for Sentinel-2 data query (YYYY-MM-DD)\n",
+    "DATE_END = \"2025-07-31\"    # End date for Sentinel-2 data query (YYYY-MM-DD)"
    ]
   },
   {
@@ -14466,138 +14460,174 @@
     "\n",
     "**Goal**: Find all Sentinel-2 L2A scenes that cover a candidate cell in the specified time period.\n",
     "\n",
-    "- Each scene includes metadata (cloud cover, acquisition time, EPSG code)\n",
+    "**Input**:\n",
+    "- Candidate cell (with geometry in ISN2004)\n",
+    "- Time period (date_start, date_end)\n",
+    "- `STAC_URL`: EOPF STAC Catalog endpoint\n",
     "\n",
-    "**Input**:- Return scenes from **all tiles** (not filtered by tile ID)\n",
+    "**Output**: List of STAC items (Sentinel-2 L2A scenes) with Zarr data URLs\n",
     "\n",
-    "- Test candidate cell bounds (in ISN2004)- Query EOPF catalog for all Sentinel-2 L2A scenes intersecting the cell\n",
-    "\n",
-    "- Time period (e.g., July 2025)- Transform cell bounds from ISN2004 to WGS84 (required for STAC query)\n",
-    "\n",
-    "- `STAC_URL`: EOPF STAC Catalog endpoint**Process**:\n",
-    "\n",
-    "\n",
-    "**Output**: List of STAC items (Sentinel-2 L2A scenes) with Zarr data URLs"
+    "**Process**:\n",
+    "- Transform cell bounds from ISN2004 to WGS84 (required for STAC API)\n",
+    "- Query EOPF catalog for all Sentinel-2 L2A scenes intersecting the cell- Return all matching scenes (from all tiles)\n",
+    "- Filter by time period"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "e72ffa5b",
+   "execution_count": 54,
+   "id": "cc42208f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def query_stac_for_cell(cell, date_start, date_end, epsg_code=5325, stac_url=None, verbose=False):\n",
+    "    \"\"\"\n",
+    "    Query EOPF STAC Catalog for Sentinel-2 L2A scenes covering a grid cell.\n",
+    "    \n",
+    "    This function searches for all Sentinel-2 L2A scenes that intersect with\n",
+    "    the given cell's geometry during the specified time period. It handles\n",
+    "    coordinate transformation from ISN2004 to WGS84 (required by STAC API).\n",
+    "    \n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    cell : pandas.Series or dict\n",
+    "        Cell with 'geometry' attribute (Shapely polygon in ISN2004)\n",
+    "    date_start : str\n",
+    "        Start date in format \"YYYY-MM-DD\"\n",
+    "    date_end : str\n",
+    "        End date in format \"YYYY-MM-DD\"\n",
+    "    epsg_code : int\n",
+    "        EPSG code of input cell geometry (default: 5325 for ISN2004)\n",
+    "    stac_url : str, optional\n",
+    "        STAC catalog URL (default: uses global STAC_URL variable)\n",
+    "    verbose : bool\n",
+    "        If True, print progress information (default: False)\n",
+    "    \n",
+    "    Returns:\n",
+    "    --------\n",
+    "    list : List of STAC items (pystac.Item objects) with Zarr data URLs\n",
+    "    \"\"\"\n",
+    "    from pyproj import Transformer\n",
+    "    \n",
+    "    # Use global STAC_URL if not provided\n",
+    "    if stac_url is None:\n",
+    "        stac_url = STAC_URL\n",
+    "    \n",
+    "    # Transform cell bounds from ISN2004 to WGS84 (required by STAC API)\n",
+    "    cell_gdf = gpd.GeoDataFrame([cell], crs=f\"EPSG:{epsg_code}\")\n",
+    "    cell_wgs84 = cell_gdf.to_crs(epsg=4326)  # WGS84 for STAC API\n",
+    "    bbox_wgs84 = cell_wgs84.total_bounds  # (minx, miny, maxx, maxy)\n",
+    "    \n",
+    "    if verbose:\n",
+    "        print(f\"Querying STAC catalog for cell ID: {cell.get('cell_id', 'unknown')}\")\n",
+    "        print(f\"  Time period: {date_start} to {date_end}\")\n",
+    "        print(f\"  Bounding box (WGS84): [{bbox_wgs84[0]:.4f}, {bbox_wgs84[1]:.4f}, {bbox_wgs84[2]:.4f}, {bbox_wgs84[3]:.4f}]\")\n",
+    "    \n",
+    "    # Connect to EOPF STAC Catalog\n",
+    "    catalog = Client.open(stac_url)\n",
+    "    \n",
+    "    # Search for Sentinel-2 L2A scenes that intersect the cell\n",
+    "    # Note: No filtering by tile ID - we accept scenes from ALL tiles\n",
+    "    search = catalog.search(\n",
+    "        collections=[\"sentinel-2-l2a\"],\n",
+    "        bbox=bbox_wgs84,\n",
+    "        datetime=[date_start, date_end]\n",
+    "    )\n",
+    "    \n",
+    "    # Collect results\n",
+    "    items = list(search.items())\n",
+    "    \n",
+    "    if verbose:\n",
+    "        print(f\"  -> Found {len(items)} scenes\") \n",
+    "    return items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "f2c54e6a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test candidate cell selected:\n",
-      "Cell ID: 267\n",
-      "Number of seeds: 3\n",
+      "======================================================================\n",
+      "TESTING STEP 3: Query STAC Catalog\n",
+      "======================================================================\n",
       "\n",
-      "Cell bounds (EPSG:5325):\n",
-      "X: [1670000, 1680000]\n",
-      "Y: [140000, 150000]\n"
+      "Test candidate cell:\n",
+      "  Cell ID: 267\n",
+      "  Seeds: 3\n",
+      "  Bounds (ISN2004): X=[1670000, 1680000], Y=[140000, 150000]\n",
+      "\n",
+      "Time period: 2025-07-01 to 2025-07-31\n",
+      "\n",
+      "Querying STAC catalog for cell ID: 267\n",
+      "  Time period: 2025-07-01 to 2025-07-31\n",
+      "  Bounding box (WGS84): [-19.6055, 63.5635, -19.4024, 63.6539]\n",
+      "  -> Found 13 scenes\n",
+      "\n",
+      "======================================================================\n",
+      "STEP 3 COMPLETED\n",
+      "======================================================================\n",
+      "Result: 13 Sentinel-2 L2A scenes found\n",
+      "\n",
+      "First scene details:\n",
+      "  ID: S2C_MSIL2A_20250729T125321_N0511_R138_T27VWL_20250729T153911\n",
+      "  Date: 2025-07-29 12:53:21.025000+00:00\n",
+      "  Cloud cover: 99.898237%\n",
+      "  EPSG: N/A\n"
      ]
     }
    ],
    "source": [
-    "# Select a test candidate cell for demonstration (first candidate from the list)\n",
+    "# ======================================================================\n",
+    "# TEST: Query STAC Catalog for a Single Candidate Cell\n",
+    "# ======================================================================\n",
+    "# This cell demonstrates Step 3 by querying the STAC catalog for all\n",
+    "# Sentinel-2 L2A scenes covering a test candidate cell.\n",
+    "\n",
+    "print(\"=\" * 70)\n",
+    "print(\"TESTING STEP 3: Query STAC Catalog\")\n",
+    "print(\"=\" * 70)\n",
+    "\n",
+    "# Select first candidate cell for testing\n",
     "test_cell = grid[grid['is_candidate']].iloc[0]\n",
     "\n",
-    "print(\"Test candidate cell selected:\")\n",
-    "print(f\"Cell ID: {test_cell['cell_id']}\")\n",
-    "print(f\"Number of seeds: {test_cell['seed_count']}\")\n",
+    "print(f\"\\nTest candidate cell:\")\n",
+    "print(f\"  Cell ID: {test_cell['cell_id']}\")\n",
+    "print(f\"  Seeds: {test_cell['seed_count']}\")\n",
     "\n",
-    "# Bounds of the test cell in EPSG:5325\n",
+    "# Get cell bounds for display\n",
     "cell_bounds = test_cell.geometry.bounds  # (minx, miny, maxx, maxy)\n",
-    "print(f\"\\nCell bounds (EPSG:{EPSG_ICELAND}):\")\n",
-    "print(f\"X: [{cell_bounds[0]:.0f}, {cell_bounds[2]:.0f}]\")\n",
-    "print(f\"Y: [{cell_bounds[1]:.0f}, {cell_bounds[3]:.0f}]\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "c35eaaef",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Cell bounds (WGS84 for STAC query):\n",
-      "Lon: [-19.6055, -19.4024]\n",
-      "Lat: [63.5635, 63.6539]\n",
-      "\n",
-      "Test period: 2025-07-01 to 2025-07-31\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Transform bounds to WGS84 for STAC query (STAC requires WGS84)\n",
-    "cell_gdf = gpd.GeoDataFrame([test_cell], crs=f\"EPSG:{EPSG_ICELAND}\")\n",
-    "cell_wgs84 = cell_gdf.to_crs(epsg=4326)\n",
-    "bbox_wgs84 = cell_wgs84.total_bounds  # (minx, miny, maxx, maxy)\n",
+    "print(f\"  Bounds (ISN2004): X=[{cell_bounds[0]:.0f}, {cell_bounds[2]:.0f}], Y=[{cell_bounds[1]:.0f}, {cell_bounds[3]:.0f}]\")\n",
     "\n",
-    "print(f\"\\nCell bounds (WGS84 for STAC query):\")\n",
-    "print(f\"Lon: [{bbox_wgs84[0]:.4f}, {bbox_wgs84[2]:.4f}]\")\n",
-    "print(f\"Lat: [{bbox_wgs84[1]:.4f}, {bbox_wgs84[3]:.4f}]\")\n",
+    "print(f\"\\nTime period: {DATE_START} to {DATE_END}\\n\")\n",
     "\n",
-    "# Test time period (e.g., July 2025 - summer)\n",
-    "test_date_start = \"2025-07-01\"\n",
-    "test_date_end = \"2025-07-31\"\n",
-    "\n",
-    "print(f\"\\nTest period: {test_date_start} to {test_date_end}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "16e57f3c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connecting to EOPF STAC Catalog: https://stac.core.eopf.eodc.eu\n",
-      "\n",
-      "Searching for Sentinel-2 L2A scenes...\n",
-      "Scenes found: 13\n",
-      "\n",
-      "First scene:\n",
-      "ID: S2C_MSIL2A_20250729T125321_N0511_R138_T27VWL_20250729T153911\n",
-      "Date: 2025-07-29 12:53:21.025000+00:00\n",
-      "Cloud Cover: 99.898237%\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Connect to EOPF STAC Catalog (using global STAC_URL variable)\n",
-    "print(f\"Connecting to EOPF STAC Catalog: {STAC_URL}\")\n",
-    "catalog = Client.open(STAC_URL)\n",
-    "\n",
-    "# Search for Sentinel-2 L2A scenes\n",
-    "print(f\"\\nSearching for Sentinel-2 L2A scenes...\")\n",
-    "search = catalog.search(\n",
-    "    collections=[\"sentinel-2-l2a\"],\n",
-    "    bbox=bbox_wgs84,\n",
-    "    datetime=[test_date_start, test_date_end]\n",
+    "# Execute Step 3: Query STAC catalog using global date variables\n",
+    "items = query_stac_for_cell(\n",
+    "    cell=test_cell,\n",
+    "    date_start=DATE_START,\n",
+    "    date_end=DATE_END,\n",
+    "    epsg_code=EPSG_ICELAND,\n",
+    "    verbose=True\n",
     ")\n",
     "\n",
-    "# Collect results\n",
-    "items = list(search.items())\n",
+    "print(\"\\n\" + \"=\" * 70)\n",
+    "print(\"STEP 3 COMPLETED\")\n",
+    "print(\"=\" * 70)\n",
+    "print(f\"Result: {len(items)} Sentinel-2 L2A scenes found\")\n",
     "\n",
-    "print(f\"Scenes found: {len(items)}\")\n",
     "if len(items) > 0:\n",
-    "    print(f\"\\nFirst scene:\")\n",
+    "    print(f\"\\nFirst scene details:\")\n",
     "    first_item = items[0]\n",
-    "    print(f\"ID: {first_item.id}\")\n",
-    "    print(f\"Date: {first_item.datetime}\")\n",
-    "    print(f\"Cloud Cover: {first_item.properties.get('eo:cloud_cover', 'N/A')}%\")\n",
+    "    print(f\"  ID: {first_item.id}\")\n",
+    "    print(f\"  Date: {first_item.datetime}\")\n",
+    "    print(f\"  Cloud cover: {first_item.properties.get('eo:cloud_cover', 'N/A')}%\")\n",
+    "    print(f\"  EPSG: {first_item.properties.get('proj:epsg', 'N/A')}\")\n",
     "else:\n",
-    "    print(\"No scenes found. Try a different time period.\")"
+    "    print(\"\\nWarning: No scenes found. Consider adjusting the time period.\")"
    ]
   },
   {
