Refactor visualization notebook: update execution counts, improve snow percentage handling, and enhance map center calculation

--- a/visualize_results.ipynb
+++ b/visualize_results.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "c4e91541",
    "metadata": {},
    "outputs": [],
@@ -33,6 +33,7 @@
     "import glob\n",
     "from pathlib import Path\n",
     "\n",
+    "import pandas as pd\n",
     "import geopandas as gpd\n",
     "import folium\n",
     "from folium import plugins\n",
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "31cc907a",
    "metadata": {},
    "outputs": [
@@ -312,6 +313,10 @@
     "    print(f\"  CRS: {grid.crs}\")\n",
     "    print(f\"  Columns: {list(grid.columns)}\")\n",
     "    \n",
+    "    # Convert snow_percentage to numeric (may be stored as string)\n",
+    "    if 'snow_percentage' in grid.columns:\n",
+    "        grid['snow_percentage'] = pd.to_numeric(grid['snow_percentage'], errors='coerce')\n",
+    "    \n",
     "    # Separate initial cells (with seeds) from expansion cells\n",
     "    # This matches the structure in icland_ice_monitoring.ipynb\n",
     "    if 'seed_count' in grid.columns:\n",
@@ -343,12 +348,16 @@
     "\n",
     "Shows processed grid cells with color-coded by origin (same as icland_ice_monitoring.ipynb):\n",
     "- **Blue cells**: Initial candidates (containing seed points)\n",
-    "- **Green cells**: Added by spatial expansion algorithm"
+    "- **Green cells**: Added by spatial expansion algorithm\n",
+    "\n",
+    "> ⚠️ **Note**: The satellite imagery shown is the *current* imagery from the tile provider, \n",
+    "> NOT from the analysis date range. Snow/ice conditions may differ from when the data was captured.\n",
+    "> Use this map to see the spatial extent of processing, not to validate snow detection accuracy."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "a3826b0e",
    "metadata": {},
    "outputs": [
@@ -714,14 +723,17 @@
     "# ======================================================================\n",
     "\n",
     "if grid is not None and len(grid) > 0:\n",
+    "    # Calculate center BEFORE converting to WGS84 (avoids centroid warning)\n",
+    "    center_point = grid.geometry.union_all().centroid\n",
+    "    center_gdf = gpd.GeoDataFrame(geometry=[center_point], crs=grid.crs)\n",
+    "    center_wgs84 = center_gdf.to_crs(epsg=4326)\n",
+    "    center_lat = center_wgs84.geometry.iloc[0].y\n",
+    "    center_lon = center_wgs84.geometry.iloc[0].x\n",
+    "    \n",
     "    # Transform to WGS84 for web mapping (folium requires WGS84)\n",
     "    processed_grid_wgs84 = grid.to_crs(epsg=4326)\n",
     "    initial_cells_wgs84 = initial_cells_gdf.to_crs(epsg=4326) if len(initial_cells_gdf) > 0 else None\n",
     "    expansion_cells_wgs84 = expansion_cells_gdf.to_crs(epsg=4326) if len(expansion_cells_gdf) > 0 else None\n",
-    "    \n",
-    "    # Calculate center for map\n",
-    "    center_lat = processed_grid_wgs84.geometry.centroid.y.mean()\n",
-    "    center_lon = processed_grid_wgs84.geometry.centroid.x.mean()\n",
     "    \n",
     "    # Create interactive map with satellite imagery\n",
     "    map_results = folium.Map(\n",
@@ -735,7 +747,7 @@
     "    folium.TileLayer(\n",
     "        tiles='https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}',\n",
     "        attr='Esri World Imagery',\n",
-    "        name='Satellite Imagery',\n",
+    "        name='Satellite Imagery (current, not analysis date)',\n",
     "        overlay=False,\n",
     "        control=True\n",
     "    ).add_to(map_results)\n",
@@ -803,6 +815,8 @@
     "        print(f\"  🔵 Blue cells: Initial candidates (with seeds) - {len(initial_cells_wgs84)}\")\n",
     "    if expansion_cells_wgs84 is not None:\n",
     "        print(f\"  🟢 Green cells: Added by spatial expansion - {len(expansion_cells_wgs84)}\")\n",
+    "    print(f\"\\n⚠️  Note: Satellite imagery is CURRENT, not from analysis date range!\")\n",
+    "    print(f\"    Analysis period: {stats.get('configuration', {}).get('date_start', 'N/A')} to {stats.get('configuration', {}).get('date_end', 'N/A')}\")\n",
     "    print(f\"\\nTip: Use the layer control in the top right to toggle layers on/off\")\n",
     "    \n",
     "    # Display map\n",
@@ -828,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "587f0835",
    "metadata": {},
    "outputs": [
@@ -866,10 +880,14 @@
     "# ======================================================================\n",
     "\n",
     "if grid is not None and len(grid) > 0:\n",
-    "    processed_grid_wgs84 = grid.to_crs(epsg=4326)\n",
+    "    # Calculate center BEFORE converting to WGS84 (avoids centroid warning)\n",
+    "    center_point = grid.geometry.union_all().centroid\n",
+    "    center_gdf = gpd.GeoDataFrame(geometry=[center_point], crs=grid.crs)\n",
+    "    center_wgs84 = center_gdf.to_crs(epsg=4326)\n",
+    "    center_lat = center_wgs84.geometry.iloc[0].y\n",
+    "    center_lon = center_wgs84.geometry.iloc[0].x\n",
     "    \n",
-    "    center_lat = processed_grid_wgs84.geometry.centroid.y.mean()\n",
-    "    center_lon = processed_grid_wgs84.geometry.centroid.x.mean()\n",
+    "    processed_grid_wgs84 = grid.to_crs(epsg=4326)\n",
     "    \n",
     "    # Create map\n",
     "    snow_map = folium.Map(\n",
@@ -886,11 +904,19 @@
     "        name='Satellite'\n",
     "    ).add_to(snow_map)\n",
     "    \n",
-    "    # Color function based on snow percentage\n",
+    "    # Color function based on snow percentage (handles string/numeric/NaN)\n",
     "    def get_color(snow_pct):\n",
-    "        if snow_pct is None or (isinstance(snow_pct, float) and np.isnan(snow_pct)):\n",
+    "        # Handle None, NaN, or non-numeric values\n",
+    "        if snow_pct is None:\n",
     "            return '#808080'  # Gray\n",
-    "        elif snow_pct >= 50:\n",
+    "        try:\n",
+    "            snow_pct = float(snow_pct)\n",
+    "            if np.isnan(snow_pct):\n",
+    "                return '#808080'  # Gray\n",
+    "        except (ValueError, TypeError):\n",
+    "            return '#808080'  # Gray\n",
+    "        \n",
+    "        if snow_pct >= 50:\n",
     "            return '#0066cc'  # Dark blue\n",
     "        elif snow_pct >= 30:\n",
     "            return '#66b3ff'  # Light blue\n",
@@ -942,6 +968,14 @@
     "else:\n",
     "    print(\"No grid data to display.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ac85cd3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1169,13 +1203,17 @@
     "# ======================================================================\n",
     "\n",
     "if grid is not None and seeds is not None:\n",
+    "    # Calculate center BEFORE converting to WGS84 (avoids centroid warning)\n",
+    "    center_point = grid.geometry.union_all().centroid\n",
+    "    center_gdf = gpd.GeoDataFrame(geometry=[center_point], crs=grid.crs)\n",
+    "    center_wgs84 = center_gdf.to_crs(epsg=4326)\n",
+    "    center_lat = center_wgs84.geometry.iloc[0].y\n",
+    "    center_lon = center_wgs84.geometry.iloc[0].x\n",
+    "    \n",
     "    processed_grid_wgs84 = grid.to_crs(epsg=4326)\n",
     "    seeds_wgs84 = seeds.to_crs(epsg=4326)\n",
     "    initial_cells_wgs84 = initial_cells_gdf.to_crs(epsg=4326) if len(initial_cells_gdf) > 0 else None\n",
     "    expansion_cells_wgs84 = expansion_cells_gdf.to_crs(epsg=4326) if len(expansion_cells_gdf) > 0 else None\n",
-    "    \n",
-    "    center_lat = processed_grid_wgs84.geometry.centroid.y.mean()\n",
-    "    center_lon = processed_grid_wgs84.geometry.centroid.x.mean()\n",
     "    \n",
     "    # Create map\n",
     "    combined_map = folium.Map(\n",
